--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Yikuaibing by happypeter</title>
+    <title>Yikuaibing</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -17,13 +17,13 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Yikuaibing</h1>
-        <p>一块冰画室主页</p>
-        <p class="view"><a href="https://github.com/happypeter/yikuaibing">View the Project on GitHub <small>happypeter/yikuaibing</small></a></p>
+        <h1>一块冰画室</h1>
+        <p>在这里遇见自己</p>
+        <p class="view"><a href="https://github.com/happypeter/yikuaibing">关于<small>画室</small></a></p>
         <ul>
-          <li><a href="https://github.com/happypeter/yikuaibing/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/happypeter/yikuaibing/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/happypeter/yikuaibing">View On <strong>GitHub</strong></a></li>
+          <li><a href="#">Download <strong>ZIP File</strong></a></li>
+          <li><a href="#">Download <strong>TAR Ball</strong></a></li>
+          <li><a href="#">关于<strong>我们</strong></a></li>
         </ul>
       </header>
       <section>
