--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <div class="css653ec53d7828d500f44c2c451c9bbb12">素描</div>
   <div class="css653ec53d7828d500f44c2c451c9bbb12">活动</div>
+  <img src="images/menu-sky-active.png" height="72" width="240" alt="">
 </body>
 </html>
