--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link href='http://www.youziku.com/webfont/CSS/653ec53d7828d500f44c2c451c9bbb12' rel='stylesheet' type='text/css'/>
+  <style>
+   body {
+    background: #73c7d1;
+    text-shadow: ;
+    color: white;
+   }
+  </style>
 </head>
 <body>
   <div class="css653ec53d7828d500f44c2c451c9bbb12">素描</div>
