--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <style>
    body {
     background: #73c7d1;
-    text-shadow: ;
+    text-shadow:1px 0 0 rgb(75, 24, 24);
+    font-size: 40px;
     color: white;
    }
   </style>
