--- a/index.html
+++ b/index.html
@@ -6,31 +6,21 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <div id="wrapper">
-    <div class="wrap blue">
-      <header class="banner">
-        <div class="topbar"></div>
-        <div class="container">
-          <div class="art-bg"></div>
-        </div>
-        <div class="tags">
-          <div class="container">
-            <div class="nav">
-              <ul class="clearfix">
-                <li class="current-page">
-                  <img src="images/tags/menu-for-kids-active.png" alt="kids">
-                </li>
-                <li><img src="images/tags/menu-for-adults.png" alt="adults"></li>
-                <li><img src="images/tags/menu-art-event.png" alt="event"></li>
-                <li><img src="images/tags/menu-sch-prog.png" alt="prog"></li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </header>
-      <div class="content"></div>
+  <header class="banner">
+    <div class="topbar"></div>
+    <div class="container">
+      <div class="art-bg"></div>
     </div>
-    <footer></footer>
-  </div>
+    <div class="container">
+      <ul class="nav clearfix">
+        <li><img src="images/tags/menu-sky-active.png" alt="kids"></li>
+        <li><img src="images/tags/menu-yellow.png" alt="adults"></li>
+        <li><img src="images/tags/menu-red.png" alt="event"></li>
+        <li><img src="images/tags/menu-blue.png" alt="prog"></li>
+      </ul>
+    </div>
+  </header>
+  <div class="sky-content"></div>
+  <footer></footer>
 </body>
 </html>
