--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
   <header class="banner">
     <div class="topbar"></div>
     <div class="container">
-      <div class="art-bg"></div>
+      <img src="images/social-bg.png" alt="" class="follow-us">
+      <div class="kid-bg"></div>
     </div>
     <div class="container">
       <ul class="nav clearfix">
