--- a/index.html
+++ b/index.html
@@ -14,10 +14,22 @@
     </div>
     <div class="container">
       <ul class="nav clearfix">
-        <li><img src="images/tags/menu-sky-active.png" alt="kids"></li>
-        <li><img src="images/tags/menu-yellow.png" alt="adults"></li>
-        <li><img src="images/tags/menu-red.png" alt="event"></li>
-        <li><img src="images/tags/menu-blue.png" alt="prog"></li>
+        <li>
+          <img src="images/tags/menu-sky-active.png" alt="kids">
+          <a href="#">素描</a>
+        </li>
+        <li>
+          <img src="images/tags/menu-yellow.png" alt="adults">
+          <a href="/yellow.html">水粉</a>
+        </li>
+        <li>
+          <img src="images/tags/menu-red.png" alt="event">
+          <a href="/yellow">油画</a>
+        </li>
+        <li>
+          <img src="images/tags/menu-blue.png" alt="prog">
+          <a href="/yellow">时尚</a>
+        </li>
       </ul>
     </div>
   </header>
