--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
   <header class="banner">
     <div class="topbar"></div>
     <div class="container">
+      <ul class="topnav">
+        <li><a href="">首页</a></li>
+        <li><a href="">关于</a></li>
+        <li><a href="">联系</a></li>
+      </ul>
       <img src="images/social-bg.png" alt="" class="follow-us">
       <div class="kid-bg"></div>
     </div>
