--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
   <header class="banner">
     <div class="topbar"></div>
     <div class="container">
-      <ul class="topnav">
-        <li><a href="">首页</a></li>
-        <li><a href="">关于</a></li>
-        <li><a href="">联系</a></li>
-      </ul>
-      <img src="images/social-bg.png" alt="" class="follow-us">
-      <div class="kid-bg"></div>
+      <div class="kid-bg">
+        <ul class="topnav">
+          <li><a href="">首页</a></li>
+          <li><a href="">关于</a></li>
+          <li><a href="">联系</a></li>
+        </ul>
+        <img src="images/logo.png" alt="logo" class="logo">
+        <img src="images/social-bg.png" alt="social-bg" class="follow-us">
+      </div>
     </div>
     <div class="container">
       <ul class="nav clearfix">
