add social items

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>yikuaibing</title>
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="vendor/font-awesome-4.3.0/css/font-awesome.min.css">
 </head>
 <body>
   <header class="banner">
@@ -17,6 +18,11 @@
         </ul>
         <img src="images/logo.png" alt="logo" class="logo">
         <img src="images/social-bg.png" alt="social-bg" class="follow-us">
+        <div class="social-icon">
+          <a href="" class="qq"><i class="fa fa-qq"></i></a>
+          <a href="" class="weibo"><i class="fa fa-weibo"></i></a>
+          <a href="" class="weixin"><i class="fa fa-weixin"></i></a>
+        </div>
       </div>
     </div>
     <div class="container">
