--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>yikuaibing</title>
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="vendor/font-awesome-4.3.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/sprite.css">
 </head>
 <body>
   <header class="banner">
@@ -27,21 +28,17 @@
     </div>
     <div class="container">
       <ul class="nav clearfix">
-        <li>
-          <img src="images/tags/menu-sky-active.png" alt="kids">
+        <li class="icon icon-menu-sky-active">
           <a href="#">素描</a>
         </li>
-        <li>
-          <img src="images/tags/menu-yellow.png" alt="adults">
+        <li class="icon icon-menu-yellow">
           <a href="/yellow.html">水粉</a>
         </li>
-        <li>
-          <img src="images/tags/menu-red.png" alt="event">
-          <a href="/yellow">油画</a>
+        <li class="icon icon-menu-red">
+          <a href="#">油画</a>
         </li>
-        <li>
-          <img src="images/tags/menu-blue.png" alt="prog">
-          <a href="/yellow">时尚</a>
+        <li class="icon icon-menu-blue">
+          <a href="#">时尚</a>
         </li>
       </ul>
     </div>
